Add Spring Initializr link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Apache Yarn, Apache Mesos, Kubernetes, Docker, or even on your laptop.
 * Consume data microservice applications as maven or docker artifacts
 * Override configuration parameters via command-line, environment variables, or YAML file
 * Provide infrastructure to test the applications in isolation
-
+* Download as starters from this version of [Spring Initializr](http://start-scs.cfapps.io/)
 
 ## Available Applications
 
@@ -78,14 +78,14 @@ Step 1 - Clone [Spring Cloud Task Application Starters](https://github.com/sprin
 
 Step 2 - [Build and Install Apps](https://github.com/spring-cloud/spring-cloud-task-app-starters#building)
 
-Step 4 - Run *timestamp* Task Application
+Step 3 - Run *timestamp* Task Application
 ```
 java -jar timestamp-task/target/timestamp-task-1.0.0.BUILD-SNAPSHOT.jar
 ```
 
-Step 5 - Verify *timestamp* Log in Console 
+Step 4 - Verify *timestamp* Log in Console 
 
-Step 6 - Verify *timestamp* App shutsdown
+Step 5 - Verify *timestamp* App shutsdown
 
 {% endcapture %}
 
