Update features and description

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ badges:
 
 Spring Cloud Task Application Starters are [Spring Boot](http://projects.spring.io/spring-boot/) 
 applications that may be any process including [Spring Batch](http://projects.spring.io/spring-batch/) 
-jobs that does not run forever, and they end/stop at some point. Spring Cloud Task Applications can 
+jobs that do not run forever, and they end/stop at some point. Spring Cloud Task Applications can 
 be used with [Spring Cloud Data Flow](http://cloud.spring.io/spring-cloud-dataflow/) to create, deploy, 
 and orchestrate short-lived data microservices.
 
@@ -55,7 +55,7 @@ Apache Yarn, Apache Mesos, Kubernetes, Docker, or even on your laptop.
 ## Features
 
 * Run standalone as Spring Boot applications
-* Orchestrate as data microservices based task/batch pipelines in Spring Cloud Data Flow
+* Orchestrate as ephemeral data microservices
 * Consume data microservice applications as maven or docker artifacts
 * Override configuration parameters via command-line, environment variables, or YAML file
 * Provide infrastructure to test the applications in isolation
