Add bit.ly links and add note to SCDF registration section

--- a/index.html
+++ b/index.html
@@ -87,6 +87,16 @@ Step 4 - Verify *timestamp* Log in Console
 
 Step 5 - Verify *timestamp* App shutsdown
 
+## Task App Starters and Spring Cloud Data Flow _(**)_
+
+| __Artifact Type__ | __Stable Release__ | __SNAPSHOT Release__ |
+| ------------------ | ------------------ | ------------------ |
+| Maven | [http://bit.ly/1-0-0-RC1-task-applications-maven](http://bit.ly/1-0-0-RC1-task-applications-maven) | [http://bit.ly/task-applications-maven](http://bit.ly/task-applications-maven) |
+| Docker | [http://bit.ly/1-0-0-RC1-task-applications-docker](http://bit.ly/1-0-0-RC1-task-applications-docker) | [http://bit.ly/task-applications-docker](http://bit.ly/task-applications-docker) |
+
+_(**) find out how to use the app-starters in Spring Cloud Data Flow by reviewing the [app-registration](http://docs.spring.io/spring-cloud-dataflow/docs/current-SNAPSHOT/reference/htmlsingle/#_registering_a_task_application) section in the reference guide_
+
+
 {% endcapture %}
 
 {% capture related_resources %}
