Add  Bacon-BUILD-SNAPSHOT bit.ly

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ badges:
   # Customize your project's badges. Delete any entries that do not apply.
   custom:
     - name: Source (GitHub)
-      url:  https://github.com/spring-cloud/spring-cloud-task-app-starters
+      url:  https://github.com/spring-cloud-task-app-starters
       icon: github
 
-    - name: Issues (Waffle)
-      url:  https://waffle.io/spring-cloud/spring-cloud-task-app-starters
+    - name: Issues
+      url:  https://github.com/spring-cloud-task-app-starters
       icon: tracking
 
     - name: CI (Bamboo)
@@ -91,7 +91,7 @@ Step 5 - Verify *timestamp* App shutsdown
 
 | __Artifact Type__ | __Stable Release__ | __SNAPSHOT Release__ |
 | ------------------ | ------------------ | ------------------ |
-| Maven | [http://bit.ly/Addison-GA-task-applications-maven](http://bit.ly/Addison-GA-task-applications-maven) | [http://bit.ly/Addison-BUILD-SNAPSHOT-task-applications-maven](http://bit.ly/Addison-BUILD-SNAPSHOT-task-applications-maven) |
+| Maven | [http://bit.ly/Addison-GA-task-applications-maven](http://bit.ly/Addison-GA-task-applications-maven) | [http://bit.ly/Belmont-BUILD-SNAPSHOT-task-applications-maven](http://bit.ly/Belmont-BUILD-SNAPSHOT-task-applications-maven) |
 | Docker | [http://bit.ly/Addison-GA-task-applications-docker](http://bit.ly/Addison-GA-task-applications-docker) | NA |
 
 _(**) find out how to use the app-starters in Spring Cloud Data Flow by reviewing the [app-registration](http://docs.spring.io/spring-cloud-dataflow/docs/current-SNAPSHOT/reference/htmlsingle/#_registering_a_task_application) section in the reference guide_
