Update quick start steps

--- a/index.html
+++ b/index.html
@@ -74,18 +74,16 @@ Apache Yarn, Apache Mesos, Kubernetes, Docker, or even on your laptop.
 
 ## Quick Start
 
-Step 1 - Clone [Spring Cloud Task Application Starters](https://github.com/spring-cloud/spring-cloud-task-app-starters.git) repository
+Step 1 - Download the latest _timestamp_ application from [here](http://repo.spring.io/libs-release/org/springframework/cloud/task/app/timestamp-task/) [eg: /1.1.0.RELEASE/timestamp-task-1.1.0.RELEASE.jar]
 
-Step 2 - [Build and Install Apps](https://github.com/spring-cloud/spring-cloud-task-app-starters#building)
-
-Step 3 - Run *timestamp* Task Application
+Step 2 - Run *timestamp* application
 ```
-java -jar timestamp-task/target/timestamp-task-1.0.0.BUILD-SNAPSHOT.jar
+java -jar timestamp-task-***.jar
 ```
 
-Step 4 - Verify *timestamp* Log in Console 
+Step 3 - Verify *timestamp* logs in console 
 
-Step 5 - Verify *timestamp* App shutsdown
+Step 4 - Verify *timestamp* application shutsdown
 
 ## Task App Starters and Spring Cloud Data Flow _(**)_
 
