Update to Belmont.M1 release

--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@ Step 4 - Verify *timestamp* application shutsdown
 
 ## Task App Starters and Spring Cloud Data Flow _(**)_
 
-| __Artifact Type__ | __Stable Release__ | __SNAPSHOT Release__ |
+| __Artifact Type__ | __Stable Release__ | __Milestone/Snapshot Release__ |
 | ------------------ | ------------------ | ------------------ |
-| Maven | [http://bit.ly/Addison-GA-task-applications-maven](http://bit.ly/Addison-GA-task-applications-maven) | [http://bit.ly/Belmont-BUILD-SNAPSHOT-task-applications-maven](http://bit.ly/Belmont-BUILD-SNAPSHOT-task-applications-maven) |
-| Docker | [http://bit.ly/Addison-GA-task-applications-docker](http://bit.ly/Addison-GA-task-applications-docker) | NA |
+| Maven | http://bit.ly/Addison-GA-task-applications-maven | http://bit.ly/Belmont-M1-task-applications-maven |
+| Docker | http://bit.ly/Addison-GA-task-applications-docker | http://bit.ly/Belmont-M1-task-applications-docker |
 
 _(**) find out how to use the app-starters in Spring Cloud Data Flow by reviewing the [app-registration](http://docs.spring.io/spring-cloud-dataflow/docs/current-SNAPSHOT/reference/htmlsingle/#_registering_a_task_application) section in the reference guide_
 
