Add new task apps

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@ Apache Yarn, Apache Mesos, Kubernetes, Docker, or even on your laptop.
 
 | __Task__ |
 | ------- |
+| composed-task-runner |
+| jdbchdfs-local |
 | spark-client |
 | spark-cluster |
 | spark-yarn |
