--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@ Step 4 - Verify *timestamp* application shutsdown
 
 _(**) find out how to use the app-starters in Spring Cloud Data Flow by reviewing the [app-registration](http://docs.spring.io/spring-cloud-dataflow/docs/current-SNAPSHOT/reference/htmlsingle/#_registering_a_task_application) section in the reference guide_
 
+  ## HTTP Repository Location for Apps
+  
+  Here you will find the direct links to the uber jars for the task apps. 
+  
+* [Stable Release](http://repo.spring.io/libs-release/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Belmont.RELEASE/spring-cloud-task-app-descriptor-Belmont.RELEASE.task-apps-maven-repo-url.properties)
+* [Latest Snapshot](http://repo.spring.io/snapshot/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Belmont.BUILD-SNAPSHOT/spring-cloud-task-app-descriptor-Belmont.BUILD-SNAPSHOT.task-apps-maven-repo-url.properties)
+  
 
 {% endcapture %}
 
