--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@ Apache Yarn, Apache Mesos, Kubernetes, Docker, or even on your laptop.
 | spark-client |
 | spark-cluster |
 | spark-yarn |
-| timestamp-batch |
 | timestamp |
+| timestamp-batch |
 
 <span id="quick-start"></span>
 
 ## Quick Start
 
-Step 1 - Download the latest _timestamp_ application from [here](http://repo.spring.io/libs-release/org/springframework/cloud/task/app/timestamp-task/) [eg: /1.1.0.RELEASE/timestamp-task-1.1.0.RELEASE.jar]
+Step 1 - Download the latest _timestamp_ application from [here](http://repo.spring.io/libs-release/org/springframework/cloud/task/app/timestamp-task/) [eg: /1.3.0.RELEASE/timestamp-task-1.3.0.RELEASE.jar]
 
 Step 2 - Run *timestamp* application
 ```
@@ -92,8 +92,8 @@ Step 4 - Verify *timestamp* application shutsdown
 
 | __Artifact Type__ | __Stable Release__ | __Milestone/Snapshot Release__ |
 | ------------------ | ------------------ | ------------------ |
-| Maven | http://bit.ly/Belmont-GA-task-applications-maven | http://bit.ly/Clark-RC1-task-applications-maven |
-| Docker | http://bit.ly/Belmont-GA-task-applications-docker | http://bit.ly/Clark-RC1-task-applications-docker |
+| Maven | http://bit.ly/Clark-GA-task-applications-maven | http://bit.ly/Clark-BUILD-SNAPSHOT-task-applications-maven |
+| Docker | http://bit.ly/Clark-GA-task-applications-docker | http://bit.ly/Clark-BUILD-SNAPSHOT-task-applications-docker |
 
 _(**) find out how to use the app-starters in Spring Cloud Data Flow by reviewing the [app-registration](http://docs.spring.io/spring-cloud-dataflow/docs/current-SNAPSHOT/reference/htmlsingle/#_registering_a_task_application) section in the reference guide_
 
@@ -101,8 +101,8 @@ _(**) find out how to use the app-starters in Spring Cloud Data Flow by reviewin
   
 Here you will find the direct links to the uber jars for the task apps. 
   
-* [Stable Release](http://repo.spring.io/libs-release/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Belmont.RELEASE/spring-cloud-task-app-descriptor-Belmont.RELEASE.task-apps-maven-repo-url.properties)
-* [Latest Snapshot/Milestone](http://repo.spring.io/libs-milestone-local/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Clark.M1/spring-cloud-task-app-descriptor-Clark.M1.task-apps-maven-repo-url.properties)
+* [Stable Release](http://repo.spring.io/libs-release/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Clark.RELEASE/spring-cloud-task-app-descriptor-Clark.RELEASE.task-apps-maven-repo-url.properties)
+* [Latest Snapshot/Milestone](http://repo.spring.io/libs-snapshot/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Clark.BUILD-SNAPSHOT/spring-cloud-task-app-descriptor-Clark.BUILD-SNAPSHOT.task-apps-maven-repo-url.properties)
   
 
 {% endcapture %}
