Fix broken bit.ly links

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@ With Spring Boot 1.5.x + Spring Cloud Task 1.2.x:
 
 | __Artifact Type__ | __Stable Release__ | __Milestone/Snapshot Release__ |
 | ------------------ | ------------------ | ------------------ |
-| Maven | https://bit.ly/Clark-GA-task-applications-maven | https://bit.ly/Clark-BUILD-SNAPSHOT-task-applications-maven |
-| Docker | https://bit.ly/Clark-GA-task-applications-docker | https://bit.ly/Clark-BUILD-SNAPSHOT-task-applications-docker |
+| Maven | http://bit.ly/Clark-GA-task-applications-maven | http://bit.ly/Clark-BUILD-SNAPSHOT-task-applications-maven |
+| Docker | http://bit.ly/Clark-GA-task-applications-docker | http://bit.ly/Clark-BUILD-SNAPSHOT-task-applications-docker |
 
 With Spring Boot 2.0.x + Spring Cloud Task 2.0.x:
 
