Upgrade to Dearborn.SR1

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ With Spring Boot 2.0.x + Spring Cloud Task 2.0.x:
 
 | __Artifact Type__ | __Stable Release__ | __Milestone/Snapshot Release__ |
 | ------------------ | ------------------ | ------------------ |
-| Maven | http://bit.ly/Dearborn-GA-task-applications-maven | http://bit.ly/Dearborn-BUILD-SNAPSHOT-task-applications-maven |
-| Docker | http://bit.ly/Dearborn-GA-task-applications-docker | http://bit.ly/Dearborn-BUILD-SNAPSHOT-task-applications-docker |
+| Maven | http://bit.ly/Dearborn-SR1-task-applications-maven | http://bit.ly/Dearborn-BUILD-SNAPSHOT-task-applications-maven |
+| Docker | http://bit.ly/Dearborn-SR1-task-applications-docker | http://bit.ly/Dearborn-BUILD-SNAPSHOT-task-applications-docker |
 
 _(**) find out how to use the app-starters in Spring Cloud Data Flow by reviewing the [app-registration](http://docs.spring.io/spring-cloud-dataflow/docs/current-SNAPSHOT/reference/htmlsingle/#_registering_a_task_application) section in the reference guide_
 
@@ -117,7 +117,7 @@ With Spring Boot 1.5.x + Spring Cloud Task 1.2.x:
 
 With Spring Boot 2.0.x + Spring Cloud Task 2.0.x:
 
-* [Stable Release](http://repo.spring.io/libs-release-local/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Dearborn.RELEASE/spring-cloud-task-app-descriptor-Dearborn.RELEASE.task-apps-maven-repo-url.properties)
+* [Stable Release](http://repo.spring.io/libs-release-local/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Dearborn.SR1/spring-cloud-task-app-descriptor-Dearborn.SR1.task-apps-maven-repo-url.properties)
 * [Latest Snapshot/Milestone](http://repo.spring.io/libs-snapshot-local/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Dearborn.BUILD-SNAPSHOT/spring-cloud-task-app-descriptor-Dearborn.BUILD-SNAPSHOT.task-apps-maven-repo-url.properties)
   
 
