--- a/index.html
+++ b/index.html
@@ -66,10 +66,6 @@ Apache Yarn, Apache Mesos, Kubernetes, Docker, or even on your laptop.
 | __Task__ |
 | ------- |
 | composed-task-runner |
-| jdbchdfs-local |
-| spark-client |
-| spark-cluster |
-| spark-yarn |
 | timestamp |
 | timestamp-batch |
 
@@ -90,19 +86,26 @@ Step 4 - Verify *timestamp* application shutsdown
 
 ## Task App Starters and Spring Cloud Data Flow _(**)_
 
-With Spring Boot 1.5.x + Spring Cloud Task 1.2.x:
+**With Spring Boot 1.5.x + Spring Cloud Task 1.2.x:**
 
 | __Artifact Type__ | __Stable Release__ | __Milestone/Snapshot Release__ |
 | ------------------ | ------------------ | ------------------ |
 | Maven | http://bit.ly/Clark-SR1-task-applications-maven | http://bit.ly/Clark-BUILD-SNAPSHOT-task-applications-maven |
 | Docker | http://bit.ly/Clark-SR1-task-applications-docker | http://bit.ly/Clark-BUILD-SNAPSHOT-task-applications-docker |
 
-With Spring Boot 2.0.x + Spring Cloud Task 2.0.x:
+**With Spring Boot 2.0.x + Spring Cloud Task 2.0.x:**
 
 | __Artifact Type__ | __Stable Release__ | __Milestone/Snapshot Release__ |
 | ------------------ | ------------------ | ------------------ |
 | Maven | http://bit.ly/Dearborn-SR1-task-applications-maven | http://bit.ly/Dearborn-BUILD-SNAPSHOT-task-applications-maven |
 | Docker | http://bit.ly/Dearborn-SR1-task-applications-docker | http://bit.ly/Dearborn-BUILD-SNAPSHOT-task-applications-docker |
+
+**With Spring Boot 2.1.x + Spring Cloud Task 2.1.x:**
+
+| __Artifact Type__ | __Milestone Release__ | __Snapshot Release__ |
+| ------------------ | ------------------ | ------------------ |
+| Maven | http://bit.ly/Elston-M1-task-applications-maven | http://bit.ly/Elston-BUILD-SNAPSHOT-task-applications-maven |
+| Docker | http://bit.ly/Elston-M1-task-applications-docker | http://bit.ly/Elston-BUILD-SNAPSHOT-task-applications-docker |
 
 _(**) find out how to use the app-starters in Spring Cloud Data Flow by reviewing the [app-registration](http://docs.spring.io/spring-cloud-dataflow/docs/current-SNAPSHOT/reference/htmlsingle/#_registering_a_task_application) section in the reference guide_
 
@@ -119,7 +122,11 @@ With Spring Boot 2.0.x + Spring Cloud Task 2.0.x:
 
 * [Stable Release](http://repo.spring.io/libs-release-local/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Dearborn.SR1/spring-cloud-task-app-descriptor-Dearborn.SR1.task-apps-maven-repo-url.properties)
 * [Latest Snapshot/Milestone](http://repo.spring.io/libs-snapshot-local/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Dearborn.BUILD-SNAPSHOT/spring-cloud-task-app-descriptor-Dearborn.BUILD-SNAPSHOT.task-apps-maven-repo-url.properties)
-  
+
+With Spring Boot 2.1.x + Spring Cloud Task 2.1.x:
+
+* [Milestone Release](http://repo.spring.io/libs-snapshot/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Elston.M1/spring-cloud-task-app-descriptor-Elston.M1.task-apps-maven-repo-url.properties)
+* [Latest Snapshot](http://repo.spring.io/libs-snapshot/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Elston.BUILD-SNAPSHOT/spring-cloud-task-app-descriptor-Elston.BUILD-SNAPSHOT.task-apps-maven-repo-url.properties)
 
 {% endcapture %}
 
