--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ badges:
       icon: ci
     
     - name: StackOverflow
-      url:  http://stackoverflow.com/questions/tagged/spring-cloud-task
+      url:  https://stackoverflow.com/questions/tagged/spring-cloud-task
       icon: stackoverflow
 
 ---
@@ -37,10 +37,10 @@ badges:
 
 {% capture billboard_description %}
 
-Spring Cloud Task Application Starters are [Spring Boot](http://projects.spring.io/spring-boot/) 
-applications that may be any process including [Spring Batch](http://projects.spring.io/spring-batch/) 
+Spring Cloud Task Application Starters are [Spring Boot](https://projects.spring.io/spring-boot/) 
+applications that may be any process including [Spring Batch](https://projects.spring.io/spring-batch/) 
 jobs that do not run forever, and they end/stop at some point. Spring Cloud Task Applications can 
-be used with [Spring Cloud Data Flow](http://cloud.spring.io/spring-cloud-dataflow/) to create, deploy, 
+be used with [Spring Cloud Data Flow](https://cloud.spring.io/spring-cloud-dataflow/) to create, deploy, 
 and orchestrate short-lived data microservices.
 
 {% endcapture %}
@@ -59,7 +59,7 @@ Apache Yarn, Apache Mesos, Kubernetes, Docker, or even on your laptop.
 * Consume data microservice applications as maven or docker artifacts
 * Override configuration parameters via command-line, environment variables, or YAML file
 * Provide infrastructure to test the applications in isolation
-* Download as starters from this version of [Spring Initializr](http://start-scs.cfapps.io/)
+* Download as starters from this version of [Spring Initializr](https://start-scs.cfapps.io/)
 
 ## Available Applications
 
@@ -73,7 +73,7 @@ Apache Yarn, Apache Mesos, Kubernetes, Docker, or even on your laptop.
 
 ## Quick Start
 
-Step 1 - Download the latest _timestamp_ application from [here](http://repo.spring.io/libs-release/org/springframework/cloud/task/app/timestamp-task/) [eg: /1.3.0.RELEASE/timestamp-task-1.3.0.RELEASE.jar]
+Step 1 - Download the latest _timestamp_ application from [here](https://repo.spring.io/libs-release/org/springframework/cloud/task/app/timestamp-task/) [eg: /1.3.0.RELEASE/timestamp-task-1.3.0.RELEASE.jar]
 
 Step 2 - Run *timestamp* application
 ```
@@ -90,24 +90,24 @@ Step 4 - Verify *timestamp* application shutsdown
 
 | __Artifact Type__ | __Stable Release__ | __Milestone/Snapshot Release__ |
 | ------------------ | ------------------ | ------------------ |
-| Maven | http://bit.ly/Elston-GA-task-applications-maven | http://bit.ly/Elston-BUILD-SNAPSHOT-task-applications-maven |
-| Docker | http://bit.ly/Elston-GA-task-applications-docker | http://bit.ly/Elston-BUILD-SNAPSHOT-task-applications-docker |
+| Maven | https://bit.ly/Elston-GA-task-applications-maven | https://bit.ly/Elston-BUILD-SNAPSHOT-task-applications-maven |
+| Docker | https://bit.ly/Elston-GA-task-applications-docker | https://bit.ly/Elston-BUILD-SNAPSHOT-task-applications-docker |
 
 **With Spring Boot 2.0.x + Spring Cloud Task 2.0.x:**
 
 | __Artifact Type__ | __Stable Release__ | __Milestone/Snapshot Release__ |
 | ------------------ | ------------------ | ------------------ |
-| Maven | http://bit.ly/Dearborn-SR1-task-applications-maven | http://bit.ly/Dearborn-BUILD-SNAPSHOT-task-applications-maven |
-| Docker | http://bit.ly/Dearborn-SR1-task-applications-docker | http://bit.ly/Dearborn-BUILD-SNAPSHOT-task-applications-docker |
+| Maven | https://bit.ly/Dearborn-SR1-task-applications-maven | https://bit.ly/Dearborn-BUILD-SNAPSHOT-task-applications-maven |
+| Docker | https://bit.ly/Dearborn-SR1-task-applications-docker | https://bit.ly/Dearborn-BUILD-SNAPSHOT-task-applications-docker |
 
 **With Spring Boot 1.5.x + Spring Cloud Task 1.2.x:**
 
 | __Artifact Type__ | __Stable Release__ | __Milestone/Snapshot Release__ |
 | ------------------ | ------------------ | ------------------ |
-| Maven | http://bit.ly/Clark-SR1-task-applications-maven | http://bit.ly/Clark-BUILD-SNAPSHOT-task-applications-maven |
-| Docker | http://bit.ly/Clark-SR1-task-applications-docker | http://bit.ly/Clark-BUILD-SNAPSHOT-task-applications-docker |
+| Maven | https://bit.ly/Clark-SR1-task-applications-maven | https://bit.ly/Clark-BUILD-SNAPSHOT-task-applications-maven |
+| Docker | https://bit.ly/Clark-SR1-task-applications-docker | https://bit.ly/Clark-BUILD-SNAPSHOT-task-applications-docker |
 
-_(**) find out how to use the app-starters in Spring Cloud Data Flow by reviewing the [app-registration](http://docs.spring.io/spring-cloud-dataflow/docs/current-SNAPSHOT/reference/htmlsingle/#_registering_a_task_application) section in the reference guide_
+_(**) find out how to use the app-starters in Spring Cloud Data Flow by reviewing the [app-registration](https://docs.spring.io/spring-cloud-dataflow/docs/current-SNAPSHOT/reference/htmlsingle/#_registering_a_task_application) section in the reference guide_
 
 ## HTTP Repository Location for Apps
   
@@ -115,18 +115,18 @@ Here you will find the direct links to the uber jars for the task apps.
 
 With Spring Boot 2.1.x + Spring Cloud Task 2.1.x:
 
-* [Stable Release](http://repo.spring.io/libs-release-local/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Elston.RELEASE/spring-cloud-task-app-descriptor-Elston.RELEASE.task-apps-maven-repo-url.properties)
-* [Latest Snapshot/Milestone](http://repo.spring.io/libs-snapshot/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Elston.BUILD-SNAPSHOT/spring-cloud-task-app-descriptor-Elston.BUILD-SNAPSHOT.task-apps-maven-repo-url.properties)
+* [Stable Release](https://repo.spring.io/libs-release-local/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Elston.RELEASE/spring-cloud-task-app-descriptor-Elston.RELEASE.task-apps-maven-repo-url.properties)
+* [Latest Snapshot/Milestone](https://repo.spring.io/libs-snapshot/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Elston.BUILD-SNAPSHOT/spring-cloud-task-app-descriptor-Elston.BUILD-SNAPSHOT.task-apps-maven-repo-url.properties)
 
 With Spring Boot 2.0.x + Spring Cloud Task 2.0.x:
 
-* [Stable Release](http://repo.spring.io/libs-release-local/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Dearborn.SR1/spring-cloud-task-app-descriptor-Dearborn.SR1.task-apps-maven-repo-url.properties)
-* [Latest Snapshot/Milestone](http://repo.spring.io/libs-snapshot-local/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Dearborn.BUILD-SNAPSHOT/spring-cloud-task-app-descriptor-Dearborn.BUILD-SNAPSHOT.task-apps-maven-repo-url.properties)
+* [Stable Release](https://repo.spring.io/libs-release-local/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Dearborn.SR1/spring-cloud-task-app-descriptor-Dearborn.SR1.task-apps-maven-repo-url.properties)
+* [Latest Snapshot/Milestone](https://repo.spring.io/libs-snapshot-local/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Dearborn.BUILD-SNAPSHOT/spring-cloud-task-app-descriptor-Dearborn.BUILD-SNAPSHOT.task-apps-maven-repo-url.properties)
 
 With Spring Boot 1.5.x + Spring Cloud Task 1.2.x:
   
-* [Stable Release](http://repo.spring.io/libs-release/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Clark.RELEASE/spring-cloud-task-app-descriptor-Clark.RELEASE.task-apps-maven-repo-url.properties)
-* [Latest Snapshot/Milestone](http://repo.spring.io/libs-snapshot/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Clark.BUILD-SNAPSHOT/spring-cloud-task-app-descriptor-Clark.BUILD-SNAPSHOT.task-apps-maven-repo-url.properties)
+* [Stable Release](https://repo.spring.io/libs-release/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Clark.RELEASE/spring-cloud-task-app-descriptor-Clark.RELEASE.task-apps-maven-repo-url.properties)
+* [Latest Snapshot/Milestone](https://repo.spring.io/libs-snapshot/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Clark.BUILD-SNAPSHOT/spring-cloud-task-app-descriptor-Clark.BUILD-SNAPSHOT.task-apps-maven-repo-url.properties)
 
 {% endcapture %}
 
@@ -135,8 +135,8 @@ With Spring Boot 1.5.x + Spring Cloud Task 1.2.x:
 ### Related Projects
 
 * [Spring Cloud Task](https://github.com/spring-cloud/spring-cloud-task/)
-* [Spring Cloud Data Flow](http://cloud.spring.io/spring-cloud-dataflow/)
-* [Spring Cloud Stream](http://cloud.spring.io/spring-cloud-stream/)
+* [Spring Cloud Data Flow](https://cloud.spring.io/spring-cloud-dataflow/)
+* [Spring Cloud Stream](https://cloud.spring.io/spring-cloud-stream/)
 
 {% endcapture %}
 
