--- a/index.html
+++ b/index.html
@@ -90,22 +90,22 @@ Step 4 - Verify *timestamp* application shutsdown
 
 | __Artifact Type__ | __Stable Release__ | __Milestone/Snapshot Release__ |
 | ------------------ | ------------------ | ------------------ |
-| Maven | http://bit.ly/Elston-GA-task-applications-maven | http://bit.ly/Elston-BUILD-SNAPSHOT-task-applications-maven |
-| Docker | http://bit.ly/Elston-GA-task-applications-docker | http://bit.ly/Elston-BUILD-SNAPSHOT-task-applications-docker |
+| Maven | https://dataflow.spring.io/Elston-GA-task-applications-maven | https://dataflow.spring.io/Elston-BUILD-SNAPSHOT-task-applications-maven |
+| Docker | https://dataflow.spring.io/Elston-GA-task-applications-docker | https://dataflow.spring.io/Elston-BUILD-SNAPSHOT-task-applications-docker |
 
 **With Spring Boot 2.0.x + Spring Cloud Task 2.0.x:**
 
 | __Artifact Type__ | __Stable Release__ | __Milestone/Snapshot Release__ |
 | ------------------ | ------------------ | ------------------ |
-| Maven | http://bit.ly/Dearborn-SR1-task-applications-maven | http://bit.ly/Dearborn-BUILD-SNAPSHOT-task-applications-maven |
-| Docker | http://bit.ly/Dearborn-SR1-task-applications-docker | http://bit.ly/Dearborn-BUILD-SNAPSHOT-task-applications-docker |
+| Maven | https://dataflow.spring.io/Dearborn-SR1-task-applications-maven | https://dataflow.spring.io/Dearborn-BUILD-SNAPSHOT-task-applications-maven |
+| Docker | https://dataflow.spring.io/Dearborn-SR1-task-applications-docker | https://dataflow.spring.io/Dearborn-BUILD-SNAPSHOT-task-applications-docker |
 
 **With Spring Boot 1.5.x + Spring Cloud Task 1.2.x:**
 
 | __Artifact Type__ | __Stable Release__ | __Milestone/Snapshot Release__ |
 | ------------------ | ------------------ | ------------------ |
-| Maven | http://bit.ly/Clark-SR1-task-applications-maven | http://bit.ly/Clark-BUILD-SNAPSHOT-task-applications-maven |
-| Docker | http://bit.ly/Clark-SR1-task-applications-docker | http://bit.ly/Clark-BUILD-SNAPSHOT-task-applications-docker |
+| Maven | https://dataflow.spring.io/Clark-SR1-task-applications-maven | https://dataflow.spring.io/Clark-BUILD-SNAPSHOT-task-applications-maven |
+| Docker | https://dataflow.spring.io/Clark-SR1-task-applications-docker | https://dataflow.spring.io/Clark-BUILD-SNAPSHOT-task-applications-docker |
 
 _(**) find out how to use the app-starters in Spring Cloud Data Flow by reviewing the [app-registration](http://docs.spring.io/spring-cloud-dataflow/docs/current-SNAPSHOT/reference/htmlsingle/#_registering_a_task_application) section in the reference guide_
 
