Switch to latest

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ Step 4 - Verify *timestamp* application shutsdown
 
 | __Artifact Type__ | __Stable Release__ | __Milestone/Snapshot Release__ |
 | ------------------ | ------------------ | ------------------ |
-| Maven | https://dataflow.spring.io/Elston-GA-task-applications-maven | https://dataflow.spring.io/Elston-BUILD-SNAPSHOT-task-applications-maven |
-| Docker | https://dataflow.spring.io/Elston-GA-task-applications-docker | https://dataflow.spring.io/Elston-BUILD-SNAPSHOT-task-applications-docker |
+| Maven | https://dataflow.spring.io/task-maven-latest | https://dataflow.spring.io/Elston-BUILD-SNAPSHOT-task-applications-maven |
+| Docker | https://dataflow.spring.io/task-docker-latest | https://dataflow.spring.io/Elston-BUILD-SNAPSHOT-task-applications-docker |
 
 **With Spring Boot 2.0.x + Spring Cloud Task 2.0.x:**
 
