--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@ Apache Yarn, Apache Mesos, Kubernetes, Docker, or even on your laptop.
 
 | __Task__ |
 | ------- |
-| composed-task-runner |
 | timestamp |
 | timestamp-batch |
 
@@ -73,7 +72,7 @@ Apache Yarn, Apache Mesos, Kubernetes, Docker, or even on your laptop.
 
 ## Quick Start
 
-Step 1 - Download the latest _timestamp_ application from [here](http://repo.spring.io/libs-release/org/springframework/cloud/task/app/timestamp-task/) [eg: /1.3.0.RELEASE/timestamp-task-1.3.0.RELEASE.jar]
+Step 1 - Download the latest _timestamp_ application from [here](http://repo.spring.io/libs-release/org/springframework/cloud/task/app/timestamp-task/) [eg: /2.1.1.RELEASE/timestamp-task-2.1.1.RELEASE.jar]
 
 Step 2 - Run *timestamp* application
 ```
@@ -101,8 +100,7 @@ Here you will find the direct links to the uber jars for the task apps.
 
 With Spring Boot 2.1.x + Spring Cloud Task 2.1.x:
 
-* [Stable Release](http://repo.spring.io/libs-release-local/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Elston.SR1/spring-cloud-task-app-descriptor-Elston.SR1.task-apps-maven-repo-url.properties)
-* [Latest Snapshot/Milestone](http://repo.spring.io/libs-snapshot/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Elston.BUILD-SNAPSHOT/spring-cloud-task-app-descriptor-Elston.BUILD-SNAPSHOT.task-apps-maven-repo-url.properties)
+* [Stable Release]( https://repo.maven.apache.org/maven2/org/springframework/cloud/task/app/spring-cloud-task-app-descriptor/Elston.SR3/spring-cloud-task-app-descriptor-Elston.SR3.task-apps-maven-repo-url.properties)
 
 {% endcapture %}
 
